Add LCP Insight
This is only returns phases and the LCP event timing for now.
It's missing some of the resource prioritization work, etc. These will be done in follow-ups.

- additionally updated some of the test traces with fresh ones that include some recently added trace events

Bug: 324957730, 327675287
Change-Id: I47a034cd23ab0293c4c72491c681d2ce82cad410
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5336458
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adriana Ixba <aixba@google.com>
Reviewed-by: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -29,6 +29,7 @@ copy_to_gen("traces") {
     "large-layout-small-recalc.json.gz",
     "large-profile.cpuprofile.gz",
     "large-recalc-style.json.gz",
+    "lcp-images-rasterizer.json.gz",
     "lcp-images.json.gz",
     "lcp-web-font.json.gz",
     "load-simple.json.gz",
