Add part of Material design tokens
Bug:none
Change-Id: Iebf1a6a5190df67bea3c3dbda25c28718a111510
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5366404
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2122,6 +2122,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/utils/imagePreview.css.js",
   "front_end/ui/legacy/components/utils/jsUtils.css.js",
   "front_end/ui/legacy/confirmDialog.css.legacy.js",
+  "front_end/ui/legacy/designTokens.css.legacy.js",
   "front_end/ui/legacy/dialog.css.legacy.js",
   "front_end/ui/legacy/dropTarget.css.legacy.js",
   "front_end/ui/legacy/emptyWidget.css.js",
