Add InteractionToNextPaint insight
Bug: 325064016
Change-Id: Id397941bb292c950d46d50a5b4a32118a5533327
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5370826
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -971,6 +971,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/helpers/Trace.js",
   "front_end/models/trace/helpers/TreeHelpers.js",
   "front_end/models/trace/insights/InsightRunners.js",
+  "front_end/models/trace/insights/InteractionToNextPaint.js",
   "front_end/models/trace/insights/LargestContentfulPaint.js",
   "front_end/models/trace/insights/RenderBlocking.js",
   "front_end/models/trace/insights/types.js",
