[RPP] Add AnnotationsManager and save Hidden Renderer Trace Events hashes into annotations metadata
Add a service that builds annotations to be saved into the metadata.
At the moment, only the Renderer Trace Events are saved.

The Annotations interface stricture is not complete and not yet being filled. I will add tests for generating correct annotations when it's generated with all of the data.

Bug: 313757110
Change-Id: I9cbf26549ed8b870daa9170609850526667d4a1d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5352346
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -567,6 +567,7 @@ grd_files_release_sources = [
   "front_end/panels/web_audio/web_audio.js",
   "front_end/panels/webauthn/webauthn-meta.js",
   "front_end/panels/webauthn/webauthn.js",
+  "front_end/services/annotations_manager/annotations_manager.js",
   "front_end/services/puppeteer/puppeteer.js",
   "front_end/services/trace_bounds/trace_bounds.js",
   "front_end/services/tracing/tracing.js",
@@ -1653,6 +1654,7 @@ grd_files_debug_sources = [
   "front_end/panels/web_audio/webAudio.css.js",
   "front_end/panels/webauthn/WebauthnPane.js",
   "front_end/panels/webauthn/webauthnPane.css.js",
+  "front_end/services/annotations_manager/AnnotationsManager.js",
   "front_end/services/puppeteer/PuppeteerConnection.js",
   "front_end/services/trace_bounds/TraceBounds.js",
   "front_end/services/tracing/PerformanceTracing.js",
