[console] Implement basic Error.cause rendering
This CL adds rudimentary support for Error.cause similar to what
firefox is doing. We'll recursively walk the 'cause' chain and print
each errors stack trace with a "Caused by: " prefix.

This CL supports cause objects that are either "Error" objects
themselves or plain strings. A possible improvement could be to
support arbitrary JS objects and call `toString` on them.

We add a simple e2e test to cover the basic user story, aka
"Error.cause works".

R=pfaffe@chromium.org

Fixed: 40182832
Change-Id: I7082e7144b1e6cd9dc20d0409db1e25279780a1d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5382167
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>

--- a/test/e2e/resources/sources/BUILD.gn
+++ b/test/e2e/resources/sources/BUILD.gn
@@ -32,6 +32,7 @@ copy_to_gen("sources") {
     "dynamic-loading-css.html",
     "dynamic-loading-javascript.html",
     "dynamic.css",
+    "error-with-cause.html",
     "error-with-sourcemap.html",
     "error-with-sourcemap.js",
     "error-with-sourcemap.js.map",
