[network] Fix HTML preview
ContentData already takes care of properly encoding data URLs when it's
needed. The HTML preview view doesn't have to encode it again.

This CL also moves the creation of the HTML preview into a static
factory method, so callers don't actualy have to worry about this and
just pass a ContentData.

R=bmeurer@chromium.org

Fixed: 328471611
Change-Id: I2ea32d85157599ec695147a56f2e3ac59f6191db
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5363614
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
(cherry picked from commit 6803ae61f284ddff135ecc19926edb8297cf6a58)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5371931

--- a/test/unittests/front_end/panels/network/BUILD.gn
+++ b/test/unittests/front_end/panels/network/BUILD.gn
@@ -15,6 +15,7 @@ ts_library("network") {
     "NetworkPanel_test.ts",
     "NetworkSearchScope_test.ts",
     "RequestCookiesView_test.ts",
+    "RequestHTMLView_test.ts",
     "RequestPayloadView_test.ts",
     "RequestPreviewView_test.ts",
     "RequestResponseView_test.ts",
