[RPP] Make breadcrumbs a part of AnnotationsManager
Setup to easily save breadcrumbs as annotations from the AnnotationsManager.

Bug: 313757110
Change-Id: Idad1a10253e29f79cb23dcf164e632fda1336e30
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5389310
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -45,6 +45,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "..:*",
+    "../../../services/annotations_manager/*",
     "../../../ui/components/docs/*",
     "../../application/components/*",
   ]
