--- a/front_end/services/annotations_manager/BUILD.gn
+++ b/front_end/services/annotations_manager/BUILD.gn
@@ -9,7 +9,10 @@ import("../../../third_party/typescript/typescript.gni")
 devtools_module("annotations_manager") {
   sources = [ "AnnotationsManager.ts" ]
 
-  deps = [ "../../models/trace:bundle" ]
+  deps = [
+    "../../models/trace:bundle",
+    "../../panels/timeline/components:bundle",
+  ]
 }
 
 devtools_entrypoint("bundle") {
