--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -26,6 +26,7 @@ devtools_module("components") {
     "../../../core/i18n:bundle",
     "../../../generated",
     "../../../models/trace:bundle",
+    "../../../services/trace_bounds:bundle",
     "../../../ui/components/helpers:bundle",
     "../../../ui/components/icon_button:bundle",
     "../../../ui/components/render_coordinator:bundle",
