Implement selector stats tracing for style recalc events
DISABLE_THIRD_PARTY_CHECK=CSS.getLocationForSelector new CDP method

This change depends on backend changes in https://chromium-review.googlesource.com/c/chromium/src/+/5100834

Docs of the selector stats feature: https://learn.microsoft.com/en-us/microsoft-edge/devtools-guide-chromium/evaluate-performance/selector-stats

features:
1. show CSS selector stats info in the DevTools performance
panel when the 'Enable CSS selector stats'
option is checked.
2. When a style recalc event is selected, show selector
stats for the event
3. when no event is selected, show the aggregated selector
stats for all the style recalc events in the time range
4. for selector stats from a CSS file, show a link to the
location where the selector is defined in the CSS file.

https://i.imgur.com/CaBa6GD.png

Bug: 324282954
Change-Id: Id9b2b9505d48ea85da2858409fe271eb5f7344dd
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5276992
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Guangyue Xu <guangyue.xu@microsoft.com>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -86,6 +86,7 @@ devtools_module("timeline") {
     "TimelinePaintProfilerView.ts",
     "TimelinePanel.ts",
     "TimelineSelection.ts",
+    "TimelineSelectorStatsView.ts",
     "TimelineTreeView.ts",
     "TimelineUIUtils.ts",
     "TimingsTrackAppender.ts",
@@ -110,6 +111,8 @@ devtools_module("timeline") {
     "../../panels/profiler:bundle",
     "../../services/annotations_manager:bundle",
     "../../services/trace_bounds:bundle",
+    "../../ui/components/data_grid:bundle",
+    "../../ui/components/linkifier:bundle",
     "../../ui/components/menus:bundle",
     "../../ui/components/panel_feedback:bundle",
     "../../ui/legacy/components/data_grid:bundle",
