--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1629,6 +1629,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/TimelinePaintProfilerView.js",
   "front_end/panels/timeline/TimelinePanel.js",
   "front_end/panels/timeline/TimelineSelection.js",
+  "front_end/panels/timeline/TimelineSelectorStatsView.js",
   "front_end/panels/timeline/TimelineTreeView.js",
   "front_end/panels/timeline/TimelineUIUtils.js",
   "front_end/panels/timeline/TimingsTrackAppender.js",
