Infra for RPP extensibility based on user timings
This adds the basic functionality to extract extension data from User Timings using the API defined in  go/cpq:rppextensibility-design

The data is extracted but not displayed. The UI bit are done in a follow up CL

Bug: 40288106
Change-Id: I90413eb7845aee703749a88bf69ea9a783ec75ab
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5272266
Reviewed-by: Victor Porof <victorporof@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -11,6 +11,7 @@ devtools_module("handlers") {
   sources = [
     "AnimationHandler.ts",
     "AuctionWorkletsHandler.ts",
+    "ExtensionTraceDataHandler.ts",
     "FramesHandler.ts",
     "GPUHandler.ts",
     "InitiatorsHandler.ts",
@@ -61,6 +62,7 @@ ts_library("unittests") {
   sources = [
     "AnimationHandler.test.ts",
     "AuctionWorkletsHandler.test.ts",
+    "ExtensionTraceDataHandler.test.ts",
     "FramesHandler.test.ts",
     "GPUHandler.test.ts",
     "InitiatorsHandler.test.ts",
