--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -944,6 +944,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/extras/Metadata.js",
   "front_end/models/trace/handlers/AnimationHandler.js",
   "front_end/models/trace/handlers/AuctionWorkletsHandler.js",
+  "front_end/models/trace/handlers/ExtensionTraceDataHandler.js",
   "front_end/models/trace/handlers/FramesHandler.js",
   "front_end/models/trace/handlers/GPUHandler.js",
   "front_end/models/trace/handlers/InitiatorsHandler.js",
@@ -966,6 +967,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/WarningsHandler.js",
   "front_end/models/trace/handlers/WorkersHandler.js",
   "front_end/models/trace/handlers/types.js",
+  "front_end/models/trace/helpers/Extensions.js",
   "front_end/models/trace/helpers/SamplesIntegrator.js",
   "front_end/models/trace/helpers/Timing.js",
   "front_end/models/trace/helpers/Trace.js",
@@ -978,6 +980,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/root-causes/LayoutShift.js",
   "front_end/models/trace/root-causes/RootCauses.js",
   "front_end/models/trace/types/Configuration.js",
+  "front_end/models/trace/types/Extensions.js",
   "front_end/models/trace/types/File.js",
   "front_end/models/trace/types/Timing.js",
   "front_end/models/trace/types/TraceEvents.js",
@@ -1599,6 +1602,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/EasterEgg.js",
   "front_end/panels/timeline/EventUICategory.js",
   "front_end/panels/timeline/EventsTimelineTreeView.js",
+  "front_end/panels/timeline/ExtensionDataGatherer.js",
   "front_end/panels/timeline/GPUTrackAppender.js",
   "front_end/panels/timeline/Initiators.js",
   "front_end/panels/timeline/InteractionsTrackAppender.js",
