Support extension tracks in RPP using user timings
This CLs implements the UI bits to render extension tracks. Namely, gather the data exported by the ExtensionTraceDataHandler and add it to the flame chart.

For this purpose a dedicated track appender is added and called along with the other appenders when the experiment is enabled.

Other changes are made to ensure that UI artifacts in the panel support extension events (i.e. the summary and tree views in the details drawer).

Bug: 40288106
Change-Id: Idd46f58ad5693be48b467b18ea52679acea75573
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5253212
Reviewed-by: Victor Porof <victorporof@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -559,6 +559,7 @@ grd_files_release_sources = [
   "front_end/panels/sources/sources-meta.js",
   "front_end/panels/sources/sources.js",
   "front_end/panels/timeline/components/components.js",
+  "front_end/panels/timeline/extensions/extensions.js",
   "front_end/panels/timeline/timeline-meta.js",
   "front_end/panels/timeline/timeline.js",
   "front_end/panels/utils/utils.js",
@@ -1603,6 +1604,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/EventUICategory.js",
   "front_end/panels/timeline/EventsTimelineTreeView.js",
   "front_end/panels/timeline/ExtensionDataGatherer.js",
+  "front_end/panels/timeline/ExtensionTrackAppender.js",
   "front_end/panels/timeline/GPUTrackAppender.js",
   "front_end/panels/timeline/Initiators.js",
   "front_end/panels/timeline/InteractionsTrackAppender.js",
@@ -1638,6 +1640,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
+  "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
   "front_end/panels/timeline/timelineFlamechartPopover.css.js",
   "front_end/panels/timeline/timelineHistoryManager.css.js",
