[cleanup] Turn `__widgetCounter` into a `WeakMap`.
Instead of slapping a `__widgetCounter` property onto arbitrary DOM
elements, use a properly encapsulated `WeakMap` within the widget
system implementation to perform the sanity-checking.

Bug: 332815658
Change-Id: Ie7ad719832330ad2aa1bb34ab96f9fbcb83ce027
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5423230
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -207,6 +207,7 @@ ts_library("unittests") {
     "UIUtils.test.ts",
     "View.test.ts",
     "ViewRegistration.test.ts",
+    "Widget.test.ts",
     "XLink.test.ts",
   ]
 
