Adopt the npm audit mirror
manage_node_deps.py still used to update dependencies but the registry has been updated to https://npm.skia.org/chrome-devtools for extra security and license checks.

Bug: chromium:331331303
Change-Id: I006567562a6fc762f5abdfe10b3d34fa796c7748
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5400698
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 # `npm run install-deps` depends on this particular setting.
 package-lock = true
+# See go/sk-npm-audit-mirror.
+registry = https://npm.skia.org/chrome-devtools
