Don't use empty frames as mainFrame candidates
This CL fixes a rare case where we have a frame with no parent, no name
and no URL being used as the main frame, which is incorrect.

The fix is to only consider a frame a candidate as the main frame if it
has no parent (existing behaviour) and if it has a URL (new behaviour
introduced in this CL).

The RendererHandler will drop processes that have invalid URLs (which
includes empty strings), so it doesn't make sense to try to use a frame
with an invalid URL as the main frame ID.

Fixed:41494290
Change-Id: I1190e1cd7b657fa1f7dc3cf44706fe6662a9353d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5424631
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -78,5 +78,6 @@ copy_to_gen("traces") {
     "web-dev-with-commit.json.gz",
     "web-dev.json.gz",
     "web-sockets.json.gz",
+    "wrong-main-frame-bug.json.gz",
   ]
 }
