[elements] Break apart the tight coupling between renderer and matchers
Bug: b:329626445
Change-Id: Id32e0d16a4a7036d2dc0dba291bcdcd86e1224c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5434062
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -56,6 +56,7 @@ devtools_module("elements") {
     "PropertiesWidget.ts",
     "PropertyNameCategories.ts",
     "PropertyParser.ts",
+    "PropertyRenderer.ts",
     "StyleEditorWidget.ts",
     "StylePropertiesSection.ts",
     "StylePropertyHighlighter.ts",
@@ -158,6 +159,7 @@ ts_library("unittests") {
     "PlatformFontsWidget.test.ts",
     "PropertiesWidget.test.ts",
     "PropertyParser.test.ts",
+    "PropertyRenderer.test.ts",
     "StylePropertiesSection.test.ts",
     "StylePropertyHighlighter.test.ts",
     "StylePropertyTreeElement.test.ts",
