Allow enabling the Performance panel in Fusebox

--- a/front_end/entrypoints/rn_fusebox/BUILD.gn
+++ b/front_end/entrypoints/rn_fusebox/BUILD.gn
@@ -32,6 +32,7 @@ devtools_entrypoint("entrypoint") {
     "../../panels/rn_welcome:meta",
     "../../panels/security:meta",
     "../../panels/sensors:meta",
+    "../../panels/timeline:meta",
     "../../panels/web_audio:meta",
     "../../panels/webauthn:meta",
     "../main:bundle",
