[testing] Run interactions tests with a unified test runner
Bug: b:333423685
Change-Id: Ibbde7fe953dbcd1350c8fe3011d43063ea69c1d1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5435762
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -3,10 +3,12 @@
 # found in the LICENSE file.
 
 import("../scripts/build/ninja/copy.gni")
+import("../third_party/typescript/typescript.gni")
 
 group("test") {
   deps = [
     ":config",
+    ":run",
     ":unittests",
     "e2e",
     "interactions",
@@ -30,3 +32,13 @@ copy_to_gen("config") {
     "karma.conf.js",
   ]
 }
+
+node_ts_library("run") {
+  sources = [ "run.ts" ]
+
+  deps = [ "shared" ]
+}
+
+source_root = rebase_path("//$devtools_location", "$target_gen_dir")
+write_file("$target_gen_dir/build.js",
+           "module.exports = {SOURCE_ROOT: '$source_root'};")
