--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "components-server": "vpython3 third_party/node/node.py --output scripts/component_server/server.js",
     "debug-e2etest": "DEBUG_TEST=1 npm run e2etest",
     "debug-interactionstest": "DEBUG_TEST=1 npm run interactionstest",
-    "debug-test": "vpython3 third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
+    "debug-webtest": "vpython3 third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
     "debug-unittest": "DEBUG_TEST=1 npm run unittest",
     "e2etest": "vpython3 third_party/node/node.py --output scripts/test/run_test_suite.js --config=test/e2e/test-runner-config.json",
     "e2etest-parallel": "vpython3 scripts/test/run_test_suite_parallel.py",
@@ -60,11 +60,12 @@
     "setup-dtrun": "cd scripts/devtools_run && npm link",
     "start": "node -e 'console.log(`This script has been removed in favor of --custom-devtools-frontend. For more information, see https://docs.google.com/document/d/1COgCBWWuTh2o-Zbp6h_z0h0LtlJaimaEDsION4RZPxc/edit?usp=sharing`);'",
     "stylelint-test": "vpython3 third_party/node/node.py --output ./node_modules/.bin/mocha \"./scripts/stylelint_rules/tests/*_test.js\"",
-    "test": "vpython3 third_party/node/node.py --output scripts/npm_test.js",
-    "test-local": "vpython3 third_party/node/node.py --output scripts/npm_test.js --layout-tests-directory=test/webtests/",
+    "webtest": "vpython3 third_party/node/node.py --output scripts/npm_test.js",
+    "webtest-local": "vpython3 third_party/node/node.py --output scripts/npm_test.js --layout-tests-directory=test/webtests/",
     "ts_library-test": "./third_party/typescript/tests/verify_ts_libary.sh",
     "unittest": "vpython3 scripts/test/run_unittests.py --no-text-coverage",
     "watch": "vpython3 third_party/node/node.py --output scripts/watch_build.js",
+    "test": "vpython3 third_party/node/node.py --output scripts/run_on_target.mjs gen/test/run.js",
     "watch-unittest": "vpython3 scripts/test/run_unittests.py --no-text-coverage --karma-args='--auto-watch --no-single-run --restart-on-file-change --auto-watch-batch-delay 250'"
   },
   "devDependencies": {
