--- a/test/conductor/BUILD.gn
+++ b/test/conductor/BUILD.gn
@@ -19,9 +19,11 @@ node_ts_library("implementation") {
     "frontend_tab.ts",
     "hooks.ts",
     "mocha_hooks.ts",
+    "paths.ts",
     "pool.ts",
     "puppeteer-state.ts",
     "target_tab.ts",
+    "test_config.ts",
     "test_runner_config.ts",
     "test_server.ts",
   ]
