[testing] Run e2e tests with a unified test runner
Bug: b:333423685
Change-Id: I47fffb340355f3e54c501b8c656c4ff5b1e562cc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5439574
Auto-Submit: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -8,6 +8,7 @@ import("../../third_party/typescript/typescript.gni")
 group("e2e") {
   deps = [
     ":config",
+    ":test_inputs",
     ":tests",
     "resources",
   ]
@@ -48,6 +49,7 @@ node_ts_library("tests") {
     "targets",
     "webaudio",
   ]
+  sources = [ "mocharc.ts" ]
 }
 
 copy_to_gen("config") {
@@ -55,4 +57,12 @@ copy_to_gen("config") {
     ".mocharc.js",
     "test-runner-config.json",
   ]
+}
+
+generated_file("test_inputs") {
+  outputs = [ "$target_gen_dir/tests.txt" ]
+  data_keys = [ "tests" ]
+  rebase = target_gen_dir
+
+  deps = [ ":tests" ]
 }
