Refactor and centralise RN experiment registration

--- a/front_end/entrypoints/main/BUILD.gn
+++ b/front_end/entrypoints/main/BUILD.gn
@@ -11,6 +11,7 @@ devtools_module("main") {
     "ExecutionContextSelector.ts",
     "MainImpl.ts",
     "SimpleApp.ts",
+    "rn_experiments.ts",
   ]
 
   deps = [
