[testing] run unittests with a unified runner
Bug: b:333423685
Change-Id: I86862784d23299c3452f513f688987369dc91e38
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5444830
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -236,3 +236,14 @@ group("unittests") {
     "ui/visual_logging:unittests",
   ]
 }
+
+generated_file("test_inputs") {
+  outputs = [ "$target_gen_dir/tests.txt" ]
+  data_keys = [ "tests" ]
+  rebase = target_gen_dir
+
+  deps = [
+    ":unittests",
+    "../inspector_overlay:unittests",
+  ]
+}
