--- a/test/conductor/BUILD.gn
+++ b/test/conductor/BUILD.gn
@@ -19,10 +19,12 @@ node_ts_library("implementation") {
     "events.ts",
     "frontend_tab.ts",
     "hooks.ts",
+    "karma-resultsdb-reporter.ts",
     "mocha_hooks.ts",
     "paths.ts",
     "pool.ts",
     "puppeteer-state.ts",
+    "resultsdb.ts",
     "target_tab.ts",
     "test_config.ts",
     "test_runner_config.ts",
