--- a/test/conductor/BUILD.gn
+++ b/test/conductor/BUILD.gn
@@ -14,6 +14,7 @@ group("conductor") {
 
 node_ts_library("implementation") {
   sources = [
+    "commandline.ts",
     "custom-query-handlers.ts",
     "events.ts",
     "frontend_tab.ts",
