--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
 # `npm run install-deps` depends on this particular setting.
 package-lock = true
+# match settings used by`npm run install-deps`.
+omit = optional
+ignore-scripts = true
 # See go/sk-npm-audit-mirror.
 registry = https://npm.skia.org/chrome-devtools
