[test] Introduce and use a helper to wait for sinon stub invocation.
Bug: none
Change-Id: I37e20b35ed8e64b2f92c194758db08884c8bebf6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5454396
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -13,6 +13,7 @@ ts_library("testing") {
     "DOMHelpers.ts",
     "DataGridHelpers.ts",
     "EnvironmentHelpers.ts",
+    "ExpectStubCall.ts",
     "ExtensionHelpers.ts",
     "LanguagePluginHelpers.ts",
     "MockConnection.ts",
