[test] Introduce and use a helper to stub FileManager
Bug:  none
Change-Id: Icacde82c49242e7b6543066b7a714667b0930fc0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5453665
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -15,6 +15,7 @@ ts_library("testing") {
     "EnvironmentHelpers.ts",
     "ExpectStubCall.ts",
     "ExtensionHelpers.ts",
+    "FileManagerHelpers.ts",
     "LanguagePluginHelpers.ts",
     "MockConnection.ts",
     "MockExecutionContext.ts",
