Simplify manage_node_deps.py
This CL simplifies manage node deps.py by
moving preferences to npmrc and removing
custom command support that is not documented.

Bug: none
Change-Id: I155fb8ca84deea883a03175f2bc6000cd6a9ad14
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5458177
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,9 @@
 # `npm run install-deps` depends on this particular setting.
 package-lock = true
-# match settings used by`npm run install-deps`.
-omit = optional
+# match settings used by `npm run install-deps`.
+omit = optional  # This is to avoid downloading esbuild-* package.
 ignore-scripts = true
+save-exact = true
+save-dev = true # Only devDependencies are allowed.
 # See go/sk-npm-audit-mirror.
 registry = https://npm.skia.org/chrome-devtools
