--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -142,6 +142,7 @@ devtools_module("ui") {
     "../../models/text_utils:bundle",
     "../../ui/legacy/theme_support:bundle",
     "../components/adorners:bundle",
+    "../components/buttons:bundle",
     "../components/helpers:bundle",
     "../components/icon_button:bundle",
     "../components/settings:bundle",
