[sources] Add E2E test for execution line/token highlighting.
Bug: 333945853
Change-Id: I636ec2e7ea2c856f27652a60a065eb91fdd55a6c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5465771
Commit-Queue: Simon Zünd <szuend@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/test/e2e/resources/sources/BUILD.gn
+++ b/test/e2e/resources/sources/BUILD.gn
@@ -56,6 +56,8 @@ copy_to_gen("sources") {
     "minified-errors.js",
     "minified-sourcecode-1.html",
     "minified-sourcecode-1.min.js",
+    "minified-sourcecode-2.html",
+    "minified-sourcecode-2.min.js",
     "minified-sourcecode.html",
     "minified-sourcecode.js",
     "multi-files-mycode.js",
