--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1615,6 +1615,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/PerformanceModel.js",
   "front_end/panels/timeline/SaveFileFormatter.js",
   "front_end/panels/timeline/SourceMapsResolver.js",
+  "front_end/panels/timeline/TargetForEvent.js",
   "front_end/panels/timeline/ThreadAppender.js",
   "front_end/panels/timeline/TimelineController.js",
   "front_end/panels/timeline/TimelineDetailsView.js",
