[testing] Fix real connection test registration
Real connection test registration is held off until the first test is
running. If there is no other test that doesn't work, so this CL runs
the registration unconditionally, after all test files have been
handled.

Bug: b:333423685
Change-Id: Ib03927ba068544c6baea5b7634f2cabbf2348678
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5465597
Auto-Submit: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -40,6 +40,7 @@ ts_library("testing") {
     "UISourceCodeHelpers.ts",
     "UserMetricsHelpers.ts",
     "VisualLoggingHelpers.ts",
+    "test_post_setup.ts",
     "test_setup.ts",
   ]
 
