Remove EventOnTimelineData topFrame + stackTrace
Bug: 40287735
Change-Id: I626dc29bb35e86f272a5ee34f5f92b91dda844e6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5465633
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/models/trace/BUILD.gn
+++ b/front_end/models/trace/BUILD.gn
@@ -48,6 +48,7 @@ devtools_entrypoint("bundle") {
     "../../testing/*",
     "../../testing/*",
     "../../ui/components/docs/*",
+    "../../ui/legacy/components/utils/*",
     "../timeline_model/*",
     "./*",
   ]
