--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1606,6 +1606,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/EventsTimelineTreeView.js",
   "front_end/panels/timeline/ExtensionDataGatherer.js",
   "front_end/panels/timeline/ExtensionTrackAppender.js",
+  "front_end/panels/timeline/FreshRecording.js",
   "front_end/panels/timeline/GPUTrackAppender.js",
   "front_end/panels/timeline/Initiators.js",
   "front_end/panels/timeline/InteractionsTrackAppender.js",
