[JS Profiler deprecation] Remove the JS Profiler code
Bug: 335130722, 40903173
Change-Id: I6cad460fcb632b4b0dfc80d842430d6d27947e11
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5465631
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/js_timeline/BUILD.gn
+++ b/front_end/panels/js_timeline/BUILD.gn
@@ -7,7 +7,7 @@ import("../../../scripts/build/ninja/devtools_module.gni")
 import("../visibility.gni")
 
 devtools_entrypoint("bundle") {
-  entrypoint = "js_profiler.ts"
+  entrypoint = "js_timeline.ts"
 
   deps = []
 
@@ -20,15 +20,11 @@ devtools_entrypoint("bundle") {
 }
 
 devtools_entrypoint("meta") {
-  entrypoint = "js_profiler-meta.ts"
+  entrypoint = "js_timeline-meta.ts"
 
   deps = [
     ":bundle",
-    "../../core/i18n:bundle",
-    "../../core/root:bundle",
-    "../../panels/profiler:bundle",
     "../../panels/timeline:bundle",
-    "../../ui/legacy:bundle",
   ]
 
   visibility = [ "../../entrypoints/*" ]
