[Compression Dictionary Transport] Introduce SharedDictionaryIssue
Currently it is difficult to know the reason for the dictionary
write failure. To show the reason, this CL introduces a new
SharedDictionaryIssue class in DevTools frontend.

The SharedDictionaryIssue is sent from a NetworkServiceDevToolsObserver
in the browser process (https://crrev.com/c/5446494). And this
SharedDictionaryIssue class will show the issue in the Issue tab of
DevTools.

Bug: 333756098
Doc: go/chrome-devtools:shared-dictionary-issues-proposal
Demo: https://devtools-dbg-stories.netlify.app/crbug-333756098
After: https://crbug.com/333756098#comment3

Bug: 333756098
Change-Id: Iaf59c2729023c10ba21ca3cc1f0bc13100e48037
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5449146
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -444,6 +444,29 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/propertyRuleInvalidNameIssue.md",
   "front_end/models/issues_manager/descriptions/propertyRuleIssue.md",
   "front_end/models/issues_manager/descriptions/sharedArrayBuffer.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorCrossOriginNoCorsRequest.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorDictionaryLoadFailure.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorMatchingDictionaryNotUsed.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorUnexpectedContentDictionaryHeader.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorCossOriginNoCorsRequest.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorDisallowedBySettings.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorExpiredResponse.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorFeatureDisabled.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorInsufficientResources.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorInvalidMatchField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorInvalidStructuredHeader.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNavigationRequest.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNoMatchField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonListMatchDestField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonSecureContext.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonStringIdField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonStringInMatchDestList.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonStringMatchField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorNonTokenTypeField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorRequestAborted.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorShuttingDown.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorTooLongIdField.md",
+  "front_end/models/issues_manager/descriptions/sharedDictionaryWriteErrorUnsupportedType.md",
   "front_end/models/issues_manager/descriptions/stylesheetLateImport.md",
   "front_end/models/issues_manager/descriptions/stylesheetRequestFailed.md",
   "front_end/models/issues_manager/issues_manager.js",
@@ -898,6 +921,7 @@ grd_files_debug_sources = [
   "front_end/models/issues_manager/QuirksModeIssue.js",
   "front_end/models/issues_manager/RelatedIssue.js",
   "front_end/models/issues_manager/SharedArrayBufferIssue.js",
+  "front_end/models/issues_manager/SharedDictionaryIssue.js",
   "front_end/models/issues_manager/SourceFrameIssuesManager.js",
   "front_end/models/issues_manager/StylesheetLoadingIssue.js",
   "front_end/models/javascript_metadata/DOMPinnedProperties.js",
